18 August 2008: Wouter
	- changes info: in logfile to notice: info: or debug: depending on 
	  the verbosity of the statements.  Better logfile message
	  classification.
	- bug #208: extra rc.d unbound flexibility for freebsd/nanobsd.

15 August 2008: Wouter
	- DLV nsec code fixed for better detection of closest existing 
	  enclosers from NSEC responses.
	- DLV works, straight to the dlv repository, so not for production.
	- Iana port update.

14 August 2008: Wouter
	- synthesize DLV messages from the rrset cache, like done for DS.

13 August 2008: Wouter
	- bug #203: nicer do-auto log message when user sets incompatible
	  options.
	- bug #204: variable name ameliorated in log.c.
	- bug #206: in iana_update, no egrep, but awk use.
	- ldns snapshot r2699 taken (includes DLV type).
	- DLV work, config file element, trust anchor read in.

12 August 2008: Wouter
	- finished adjusting testset to provide qtype NS answers.

11 August 2008: Wouter
	- Fixup rrset security updates overwriting 2181 trust status.
	  This makes validated to be insecure data just as worthless as
	  nonvalidated data, and 2181 rules prevent cache overwrites to them.
	- Fix assertion fail on bogus key handling.
	- dnssec lameness detection works on first query at trust apex.
	- NS queries get proper cache and dnssec lameness treatment.
	- fixup compilation without pthreads on linux.

8 August 2008: Wouter
	- NS queries are done after every referral.
	  validator is used on those NS records (if anchors enabled).

7 August 2008: Wouter
	- Scrubber more strict. CNAME chains, DNAMEs from cache, other 
	  irrelevant rrsets removed.
	- 1.0.2 released from 1.0 support branch.
	- fixup update-anchor.sh to work both in BSD shell and bash.

5 August 2008: Wouter
	- fixup DS test so apex nodata works again.

4 August 2008: Wouter
	- iana port update. 
	- TODO update.
	- fix bug 201: null ptr deref on cleanup while udp pkts wait for port.
	- added explanatory text for outgoing-port-permit in manpage.
